- Fix should save property - Change gravity of toast to Center for iOS - Change type of reportButtonIcon property to Widget type

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smart_logs
 description: Smart logs is a package which can be use to log any type of message, exception, stack trace.
-version: 0.0.4
+version: 0.0.5
 homepage: https://github.com/whizpool/smartlogs-flutter.git
 
 environment:
@@ -15,7 +15,7 @@ dependencies:
   path: ^1.8.3
   archive: ^3.4.5
   intl: ^0.18.1
-  package_info_plus: ^4.2.0
+  package_info_plus: any
   device_info_plus: ^9.0.3
   disk_space: ^0.2.1
   flutter_email_sender: ^6.0.2
@@ -24,6 +24,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
