--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  smart_logs: ^0.0.4
-  
-  # smart_logs:
-  #   path: ../
+  # smart_logs: ^0.0.4
+
+  smart_logs:
+    path: ../
 dev_dependencies:
   flutter_test:
     sdk: flutter
