--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smart_logs
 description: Smart logs is a package which can be use to log any type of message, exception, stack trace.
-version: 0.0.5
+version: 0.0.6
 homepage: https://github.com/whizpool/smartlogs-flutter.git
 
 environment:
@@ -15,9 +15,9 @@ dependencies:
   path: ^1.8.3
   archive: ^3.4.5
   intl: ^0.19.0
-  package_info_plus: any
+  package_info_plus: ^5.0.1
   device_info_plus: ^9.0.3
-  disk_space: ^0.2.1
+  disk_space_upgrade: ^0.0.1
   flutter_email_sender: ^6.0.2
   fluttertoast: ^8.2.2
 
