--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smart_logs
 description: Smart logs is a package which can be use to log any type of message, exception, stack trace.
-version: 0.0.7
+version: 0.0.10
 homepage: https://github.com/whizpool/smartlogs-flutter.git
 
 environment:
@@ -13,13 +13,14 @@ dependencies:
   cupertino_icons: ^1.0.6
   path_provider: ^2.1.1
   path: ^1.8.3
-  archive: ^3.4.5
+  archive: ^3.5.0
   intl: ^0.19.0
   package_info_plus: ^8.0.0
   device_info_plus: ^10.1.0
   disk_space_upgrade: ^0.0.1
   flutter_email_sender: ^6.0.2
   fluttertoast: ^8.2.2
+  lints: ^3.0.0
 
 dev_dependencies:
   flutter_test:
