--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smart_logs
 description: Smart logs is a package which can be use to log any type of message, exception, stack trace.
-version: 1.0.3
+version: 1.0.4
 homepage: https://github.com/whizpool/smartlogs-flutter.git
 
 environment:
@@ -15,12 +15,13 @@ dependencies:
   path: ^1.8.3
   archive: ^3.5.0
   intl: ^0.20.0
-  package_info_plus: ^8.0.0
-  device_info_plus: ^10.1.0
+  package_info_plus: ^8.1.1
+  device_info_plus: ^11.1.1
   disk_space_upgrade: ^0.0.1
   flutter_email_sender: ^6.0.2
   fluttertoast: ^8.2.2
-
+dependency_overrides:
+  web: ^0.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
